--- a/installations/multi-node/install-demo.yml
+++ b/installations/multi-node/install-demo.yml
@@ -110,6 +110,7 @@
         object: apigee-4.19.06.tar.gz
         dest: /tmp/apigee-4.19.06.tar.gz
         mode: get
+        overwrite: different
 
     - name: Copy file from tmp to repos folder
       copy:
