--- a/installations/multi-node/install-demo.yml
+++ b/installations/multi-node/install-demo.yml
@@ -226,6 +226,7 @@
       - "~/.apigee"
   roles:
     - apigee-opdk-modules
+    - { role: apigee-opdk-start-components, component_name: 'edge-router'}
     - { role: apigee-opdk-setup-component, profile: 'rmp', tags: ['minimum', 'rmp'] }
     - { role: apigee-opdk-server-self, server_types: ['router'], tags: ['self'] }
     - { role: apigee-opdk-server-self, server_types: ['mp'], tags: ['self'] }
